# NumbersPredictor

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
res/model/: model1.nnm  model2.nnm  model3.nnm  model4.nnm  model5.nnm  model6.nnm
src/: Main.cpp
src/Application/: Application.cpp  Application.h
src/NumbersClassifier/: NumbersClassifier.cpp  NumbersClassifier.h
src/NumbersClassifier/DataLoader/: DataLoader.cpp  DataLoader.h
src/NumbersClassifier/NeuralNetwork/: ActivateFunction.cpp  ActivateFunction.h  NeuralNetwork.cpp  NeuralNetwork.h
src/NumbersClassifier/NeuralNetwork/Matrix/: Matrix.cpp  Matrix.h
src/Widget/: Widget.cpp  Widget.h
src/Widget/Box/: Box.cpp  Box.h
src/Widget/Button/: Button.cpp  Button.h
src/Widget/Canvas/: Canvas.cpp  Canvas.h  Pixel.cpp  Pixel.h
src/Widget/Field/: Field.cpp  Field.h
src/Widget/Menu/: Menu.cpp  Menu.h
src/Widget/Slider/: Slider.cpp  Slider.h
src/Window/: Window.cpp  Window.h
